--- a/docker-compose_swarm_for_local.yaml
+++ b/docker-compose_swarm_for_local.yaml
@@ -45,7 +45,7 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.2.2}
-  image: ${AIRFLOW_IMAGE_NAME:-airflow:2.2.3-01}
+  image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
   # build: .
   environment:
     &airflow-common-env
@@ -65,7 +65,6 @@ x-airflow-common:
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
-    # - airflowlogs:/usr/local/airflow/logs
     - ./plugins:/opt/airflow/plugins
     # - ${PWD}/airflow.cfg:/opt/airflow/airflow.cfg
     - ./repository:/opt/airflow/repository
@@ -171,9 +170,9 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
-  airflow-worker1:
+  airflow-worker:
     <<: *airflow-common
-    container_name: airflow-worker1
+    container_name: airflow-worker
     command: celery worker
     healthcheck:
       test:
@@ -188,36 +187,36 @@ services:
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
     restart: always
-    ports:
-      - 50001:8793
+    # ports:
+    #   - 50001:8793
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
 
-  airflow-worker2:
-    <<: *airflow-common
-    container_name: airflow-worker2
-    command: celery worker
-    healthcheck:
-      test:
-        - "CMD-SHELL"
-        - 'celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
-      interval: 10s
-      timeout: 10s
-      retries: 5
-    environment:
-      <<: *airflow-common-env
-      # Required to handle warm shutdown of the celery workers properly
-      # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
-      DUMB_INIT_SETSID: "0"
-    restart: always
-    ports:
-      - 50002:8793
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
+  # airflow-worker2:
+  #   <<: *airflow-common
+  #   container_name: airflow-worker2
+  #   command: celery worker
+  #   healthcheck:
+  #     test:
+  #       - "CMD-SHELL"
+  #       - 'celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
+  #     interval: 10s
+  #     timeout: 10s
+  #     retries: 5
+  #   environment:
+  #     <<: *airflow-common-env
+  #     # Required to handle warm shutdown of the celery workers properly
+  #     # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
+  #     DUMB_INIT_SETSID: "0"
+  #   restart: always
+  #   ports:
+  #     - 50002:8793
+  #   depends_on:
+  #     <<: *airflow-common-depends-on
+  #     airflow-init:
+  #       condition: service_completed_successfully
 
   airflow-triggerer:
     <<: *airflow-common
