--- a/docker-compose_swarm_for_local.yaml
+++ b/docker-compose_swarm_for_local.yaml
@@ -95,7 +95,7 @@ services:
   #     retries: 5
   #   restart: always
   mysql:
-    container_name: mysql
+    # container_name: mysql
     image: localhost:5000/mysql:8.0.27
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -115,7 +115,7 @@ services:
             retries: 10
 
   redis:
-    container_name: redis
+    # container_name: redis
     image: localhost:5000/redis:6.2.6
     expose:
       - 6379
@@ -126,9 +126,9 @@ services:
       retries: 50
     restart: always
 
-  airflow-webserver:
+  webserver:
     # <<: *airflow-common
-    container_name: airflow-webserver
+    # container_name: airflow-webserver
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     build: .
     environment:
@@ -157,15 +157,15 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on: [airflow-init]
+    depends_on: [init]
       # <<: *airflow-common-depends-on
       # airflow-init:
         # condition: service_completed_successfully
 
-  airflow-scheduler:
+  scheduler:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
-    container_name: airflow-scheduler
+    # container_name: airflow-scheduler
     build: .
     environment:
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -192,12 +192,12 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on: [airflow-init]
+    depends_on: [init]
       # <<: *airflow-common-depends-on
       # airflow-init:
       #   condition: service_completed_successfully
 
-  airflow-jupyter:
+  jupyter:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     build: .
@@ -219,17 +219,17 @@ services:
       - ./plugins:/opt/airflow/plugins
       - ./repository:/opt/airflow/repository
     user: "${AIRFLOW_UID:-50000}:0"
-    container_name: airflow-jupyter
+    # container_name: airflow-jupyter
     command: bash -cx "jupyter notebook --ip 0.0.0.0  --NotebookApp.token='airflow' --no-browser"
     ports:
       - 8888:8888
     restart: always
-    depends_on: [airflow-scheduler]
+    depends_on: [scheduler]
       # <<: *airflow-common-depends-on
       # airflow-init:
       #   condition: service_completed_successfully
 
-  airflow-worker:
+  worker:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
@@ -253,7 +253,7 @@ services:
       - ./plugins:/opt/airflow/plugins
       - ./repository:/opt/airflow/repository
     user: "${AIRFLOW_UID:-50000}:0"
-    container_name: airflow-worker
+    # container_name: airflow-worker
     command: celery worker
     healthcheck:
       test:
@@ -268,16 +268,16 @@ services:
     #   # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
     #   DUMB_INIT_SETSID: "0"
     restart: always
-    depends_on: [airflow-scheduler]
+    depends_on: [scheduler]
       # #<<: *airflow-common-depends-on
       # airflow-init:
       #   condition: service_completed_successfully
 
-  airflow-triggerer:
+  triggerer:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     build: .
-    container_name: airflow-triggerer
+    # container_name: airflow-triggerer
     command: triggerer
     environment:
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -303,16 +303,16 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on: [airflow-init]
+    depends_on: [init]
       # <<: *airflow-common-depends-on
       # airflow-init:
       #   condition: service_completed_successfully
 
-  airflow-init:
+  init:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     build: .
-    container_name: airflow-init
+    # container_name: airflow-init
     entrypoint: /bin/bash
     # yamllint disable rule:line-length
     command:
@@ -424,7 +424,7 @@ services:
     # <<: *airflow-common
     image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.3.2-01}
     build: .
-    container_name: flower
+    # container_name: flower
     command: celery flower
     environment:
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -452,7 +452,7 @@ services:
       timeout: 10s
       retries: 5
     restart: always
-    depends_on: [airflow_scheduler]
+    depends_on: [scheduler]
       # <<: *airflow-common-depends-on
       # airflow-init:
       #   condition: service_completed_successfully
