--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
   #   restart: always
   mysql:
     container_name: mysql
-    image: localhost:5000/mysql:8.0.27
+    image: mysql:8.0.29
     build: .
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -79,7 +79,7 @@ services:
 
   redis:
     container_name: redis
-    image: localhost:5000/redis:6.2.6
+    image: redis:6.2.6
     build: .
     expose:
       - 6379:6379
@@ -92,7 +92,7 @@ services:
 
   airflow-webserver:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
@@ -130,7 +130,7 @@ services:
 
   airflow-scheduler:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
@@ -166,7 +166,7 @@ services:
 
   airflow-jupyter:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
@@ -199,7 +199,7 @@ services:
 
   airflow-worker:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
@@ -291,7 +291,7 @@ services:
 
   airflow-triggerer:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
@@ -327,7 +327,7 @@ services:
 
   airflow-init:
     # <<: *airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     container_name: airflow-init
@@ -442,7 +442,7 @@ services:
   #    - airflow
 
   flower:
-    image: ${AIRFLOW_IMAGE_NAME:-localhost:5000/airflow:2.2.3-01}
+    image: ${AIRFLOW_IMAGE_NAME:-airflow:2.3.2-01}
     # docker-swarm으로 올릴때는 repository에 있는 이미지를 build 한다는 명령어가 있어야 함
     build: .
     environment:
