--- a/docker-compose_swarm_for_local.yaml
+++ b/docker-compose_swarm_for_local.yaml
@@ -133,6 +133,7 @@ services:
     build: .
     environment:
       AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: mysql+pymysql://airflow:airflow@mysql:3306/airflow
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: mysql+pymysql://airflow:airflow@mysql:3306/airflow
       AIRFLOW__CELERY__RESULT_BACKEND: db+mysql://airflow:airflow@mysql:3306/airflow
       AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
